Change templatetag name & Improve docstrings

--- a/templates/admin/change_form.html
+++ b/templates/admin/change_form.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load i18n admin_static admin_modify suit_tags admin_urls firebase_settings %}
+{% load i18n admin_static admin_modify suit_tags admin_urls flame_tags %}
 {% load url from future %}
 
 {% block extrahead %}{{ block.super }}
